fix: form height breaks layout too much

--- a/src/assets/css/pages/home.css
+++ b/src/assets/css/pages/home.css
@@ -58,8 +58,8 @@
   background-image: linear-gradient(
       105deg,
       color-mod($color-white a(90%)) 0%,
-      color-mod($color-white a(90%)) 50%,
-      transparent 50%
+      color-mod($color-white a(90%)) 60%,
+      transparent 60%
     ),
     url(~@img/nat-10.jpg);
 
@@ -76,7 +76,7 @@
   }
 
   @element form {
-    width: 50%;
+    width: 60%;
     height: inherit;
 
     @apply tw-p-12;
